# Buecherei_SRH

./: Bücherrei.mwb  README.md  app.py  bibliothek_projekt.sql  db.py  execute.py  main.py  name_gen.py  pyproject.toml  scrapper.py  sqlalchemy.sqlite  strasse.txt
static/css/: style.css
templates/: Search.html  add.html  base.html  buch.html  copy paste  edit.html  index.html  list.html  nutzer.html  popup.html  search.html
