[tool.poetry]
name = "buecherei_srh"
version = "0.1.0"
description = ""
authors = ["Krytos <kmeinon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
SQLAlchemy = "^1.4.39"
flask-paginate = "^2022.1.8"
Flask-Modals = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"